Deploy: update api

--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@ MONGO_URL=mongodb+srv://Jasaswini:Ja%40577000@tradenest.qhdf4gq.mongodb.net/?ret
 
 JWT_SECRET=tradenestsecret
 PORT=3002
+
+
+CLOUD_NAME = dprqt4hhn
+
+CLOUD_API_KEY = 871546918484634
+
+CLOUD_SECRET = KQ6ORG718-rXUi5EvSStPsQFqKY
